--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="img-block">
-            <div class="immage"><img src="img/01.webp" alt=""></div>
+            <div class="immage"></div>
         </div>
     </div>
 </body>
