--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 <body>
     <div id="container">
         <div id="img-block">
-            <div class="immage"></div>
+            <div class="immage">
+                <!-- Up -->
+                <div class="button top">⌃</div>
+                <div class="box"></div>
+                <div class="button bottom">⌵</div>
+            </div>
         </div>
     </div>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
