fix: immaga active class addiction

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <div class="immage">
                 <!-- Up -->
                 <div class="button top">⌃</div>
-                <div class="box"></div>
-                <div class="button bottom">⌵</div>
+                <div class="box">
+                    
+                </div>
+                <div class="button next">⌵</div>
             </div>
         </div>
     </div>
