fix: the js file and html is running.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="img-block">
             <div class="immage">
                 <!-- Up -->
-                <div class="button top">⌃</div>
+                <div class="button previous">⌃</div>
                 <div class="box">
                     
                 </div>
